Correct wrong spelling

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     alt="Design">
                 <h5>DESIGN</h5>
                 <p>Our design practice offers a full range of services including branding strategy, interaction and
-                    visual design and user experience testing. Throughout your project, our designers create and
+                    visual design and user experiences testing. Throughout your project, our designers create and
                     implement visual designs and workflows, solicit user feedback and work with you to makes sure
                     what gets built is what is needed.</p>
                 </p>
