Changing sources of icons, pngs and images

--- a/index.html
+++ b/index.html
@@ -27,18 +27,14 @@
     <!--HOMEPAGE-->
     <div class="container-fluid intro">
         <div>
-            <img class="delani-logo"
-                src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/logo/logo.png"
-                alt="Delani Logo">
+            <a href=""><img class="delani-logo" src="assets/logo/logo.png" alt="Delani Logo"></a>
         </div>
         <div class="intro-message">
             <h1>WELCOME <br> TO DELANI STUDIOS</h1>
             <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
         </div>
         <div>
-            <a href="#about"> <img class="mouse-click"
-                    src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/mouse_click.png"
-                    alt="mouse button"></a>
+            <a href="#about"> <img class="mouse-click" src="assets/mouse_click.png" alt="mouse button"></a>
         </div>
     </div>
     <!--ABOUT DELANI-->
@@ -64,9 +60,7 @@
         <h4>WHAT WE DO</h4>
         <div class="row">
             <div class="service-provided col-lg-4 col-md-6 col-sm-12">
-                <img class="service-img"
-                    src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/services_icons/design_icon.png"
-                    alt="Design">
+                <img class="service-img" src="assets/services_icons/design_icon.png" alt="Design">
                 <h5>DESIGN</h5>
                 <p>Our design practice offers a full range of services including branding strategy, interaction and
                     visual design and user experiences testing. Throughout your project, our designers create and
@@ -77,9 +71,7 @@
 
 
             <div class="service-provided col-lg-4 col-md-6 col-sm-12">
-                <img class="service-img"
-                    src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/services_icons/dev_icon.png"
-                    alt="Development">
+                <img class="service-img" src="assets/services_icons/dev_icon.png" alt="Development">
                 <h5>DEVELOPMENT</h5>
                 <p>All engineers are fluent in the latest enterprise, mobile and web developmnet technologies. <br> They
                     collaborate with your team to write, test and improve code on a daily basis, using proven <br>
@@ -88,9 +80,7 @@
 
 
             <div class="service-provided col-lg-4 col-md-6 col-sm-12">
-                <img class="service-img"
-                    src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/services_icons/product_icon.png"
-                    alt="Product">
+                <img class="service-img" src="assets/services_icons/product_icon.png" alt="Product">
                 <h5>PRODUCT MANAGEMENT</h5>
                 <p>Planning and development is iterative. Because we are constantly coding and testing, the <br>
                     products we build are always ready to go live. This iterative process allows for changes as <br>
@@ -104,56 +94,40 @@
             <h4>PORTFOLIO</h4>
             <div class="row">
                 <div class=" col-lg-3 col-md-6 col-sm-12">
-                    <img class="portfolio-img"
-                        src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/portfolio/work4.jpg"
-                        alt="">
+                    <img class="portfolio-img" src="assets/portfolio/work4.jpg" alt="">
                 </div>
                 <div class=" col-lg-3 col-md-6 col-sm-12">
-                    <img class="portfolio-img"
-                        src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/portfolio/work3.jpg"
-                        alt="">
+                    <img class="portfolio-img" src="assets/portfolio/work3.jpg" alt="">
                 </div>
 
 
                 <div class=" col-lg-3 col-md-6">
-                    <img class="portfolio-img"
-                        src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/portfolio/work2.jpg"
-                        alt="">
+                    <img class="portfolio-img" src="assets/portfolio/work2.jpg" alt="">
                 </div>
 
 
                 <div class=" col-lg-3 col-md-6">
-                    <img class="portfolio-img"
-                        src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/portfolio/work1.jpg"
-                        alt="">
+                    <img class="portfolio-img" src="assets/portfolio/work1.jpg" alt="">
                 </div>
             </div>
 
             <div class="row">
                 <div class=" col-lg-3 col-md-6">
-                    <img class="portfolio-img"
-                        src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/portfolio/work5.jpg"
-                        alt="">
+                    <img class="portfolio-img" src="assets/portfolio/work5.jpg" alt="">
                 </div>
 
                 <div class=" col-lg-3 col-md-6">
-                    <img class="portfolio-img"
-                        src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/portfolio/work6.jpg"
-                        alt="">
+                    <img class="portfolio-img" src="assets/portfolio/work6.jpg" alt="">
                 </div>
 
 
                 <div class=" col-lg-3 col-md-6">
-                    <img class="portfolio-img"
-                        src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/portfolio/work7.jpg"
-                        alt="">
+                    <img class="portfolio-img" src="assets/portfolio/work7.jpg" alt="">
                 </div>
 
 
                 <div class=" col-lg-3 col-md-6">
-                    <img class="portfolio-img"
-                        src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/portfolio/work8.jpg"
-                        alt="">
+                    <img class="portfolio-img" src="assets/portfolio/work8.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -253,7 +227,7 @@
             </div>
         </footer>
 
-<!--jQUERY LINKS-->
+        <!--jQUERY LINKS-->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="index.js"></script>
