Changing source of icons

--- a/index.html
+++ b/index.html
@@ -161,63 +161,53 @@
             <div class="d-flex flex-row justify-content-center p-4">
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/twitter.png"
-                            alt="twitter">
+                        <img src="assets/social_icons/twitter.png" alt="twitter">
                     </a>
                 </div>
 
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/dribble.png"
-                            alt="dribble">
+                        <img src="assets/social_icons/dribble.png" alt="dribble">
                     </a>
                 </div>
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/facebook.png"
-                            alt="facebook">
+                        <img src="assets/social_icons/facebook.png" alt="facebook">
                     </a>
                 </div>
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/g_plus.png"
-                            alt="google plus">
+                        <img src="assets/social_icons/g_plus.png" alt="google plus">
                     </a>
                 </div>
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/skype.png"
-                            alt="skype">
+                        <img src="assets/social_icons/skype.png" alt="skype">
                     </a>
                 </div>
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/you_tube.png"
-                            alt="YouTube">
+                        <img src="assets/social_icons/you_tube.png" alt="YouTube">
                     </a>
                 </div>
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/behance.png"
-                            alt="Behance">
+                        <img src="assets/social_icons/behance.png" alt="Behance">
                     </a>
                 </div>
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/pinterest.png"
-                            alt="Pinterest">
+                        <img src="assets/social_icons/pinterest.png" alt="Pinterest">
                     </a>
                 </div>
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/stumble_upon.png"
-                            alt="Stumble Upon">
+                        <img src="assets/social_icons/stumble_upon.png" alt="Stumble Upon">
                     </a>
                 </div>
                 <div class="m-md-3">
                     <a href="">
-                        <img src="https://raw.githubusercontent.com/moringaschool/moringa-core-interview-projects/master/Assignment_2/assets/social_icons/flickr.png"
-                            alt="Flickr">
+                        <img src="assets/social_icons/flickr.png" alt="Flickr">
                     </a>
                 </div>
             </div>
